<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>bob_image_processing</name>
    <version>0.0.1</version>
    <description>ROS2 Node for getting images and publishing other images</description>
    <maintainer email="you@example.com">Your Name</maintainer>
    <license>GPLv3</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>vision_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>rcl_interfaces</depend>
    <depend>bob_camera</depend>
    <depend>message_filters</depend>
    <depend>rclcpp_components</depend>
    <depend>bob_interfaces</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
