<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bob_launch</name>
  <version>0.0.0</version>
  <description>Launching package for BobCamera</description>
  <maintainer email="fabio.c.barros@gmail.com">ros</maintainer>
  <license>GPLv3</license>
  
  <depend>python3-opencv</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
